fix css bug at todo titles - we need word-wrap

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -706,6 +706,7 @@ ul.aog-list li .title {
     /** BUT STRANGELY, THIS WILL NOT... **/
     overflow: hidden;
 
+    word-wrap: break-word;
     /*word-break         : break-word;*/
     /*-webkit-transition : color 0.4s;
     transition         : color 0.4s;*/
